refactor(dst): set platform params as enum
